# agent-playground

./: .gitignore  pyproject.toml
notebooks/: autogen_v0.4_quickstart.ipynb
src/agent_playground/: __init__.py
src/google-adk/coding_agent/: agent.py
src/google-adk/weather_agent/: agent.py  evalsetdf55ee.evalset.json
src/langgraph/: breakpoint.py  custom_react_agent.py
src/playwright_experiment/: test_example.py
src/pydantic-ai/: agent_delegation_deps.py  agents_as_dependencies.py  programmatic_handoff.py  sql_gen.py
