[project]
name = "agent-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-core==0.4.0.dev8",
    "ipykernel>=6.29.5",
    "autogen-ext==0.4.0.dev8",
    "docker>=7.1.0",
    "pytest-playwright>=0.6.1",
    "playwright>=1.49.0",
    "aiofiles>=24.1.0",
    "autogen-agentchat==0.4.0.dev8",
    "devtools>=0.12.2",
    "logfire>=2.6.0",
    "langgraph>=0.2.56",
    "langchain-openai>=0.2.11",
    "mlflow>=2.18.0",
    "langchain-core>=0.3.21",
    "pydantic-ai>=0.0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
